# project name, and type
PROJECT(OpenApoc_DataExtractor CXX C)

# check cmake version
CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package (Threads REQUIRED)

set (DATAEXTRACTOR_SOURCE_FILES
	common/tacp.cpp
	common/strtab.cpp
	common/ufo2p.cpp
	extract_doodads.cpp
	extract_agent_equipment.cpp
	extract_agent_types.cpp
	extract_battlescape_map.cpp
	extract_battlescape_map_parts.cpp
	extract_battle_shared_resources.cpp
	extract_facilities.cpp
	extract_organisations.cpp
	extract_vehicle_equipment.cpp
	extract_city_map.cpp
	extract_economy.cpp
	extract_buildings.cpp
	extract_vehicles.cpp
	extract_city_scenery.cpp
	extract_base_layouts.cpp
	extract_bulletsprites.cpp
	extractors.cpp
	extract_research.cpp
	extract_unit_image_packs.cpp
	extract_unit_animation_packs.cpp
	extract_unit_animation_pack_unit.cpp
	extract_unit_animation_pack_bsk.cpp
	extract_unit_animation_pack_psi.cpp
	extract_unit_animation_pack_mega.cpp
	extract_unit_animation_pack_egg.cpp
	extract_unit_animation_pack_gun.cpp
	extract_unit_animation_pack_multi.cpp
	extract_unit_animation_pack_civ.cpp
	extract_unit_animation_pack_hyper.cpp
	extract_unit_animation_pack_spitter.cpp
	extract_unit_animation_pack_micro.cpp
	extract_unit_animation_pack_q.cpp
	extract_unit_animation_pack_popper.cpp
	extract_unit_animation_pack_chrysalis.cpp
	main.cpp)

source_group(dataextractor\\sources FILES ${DATAEXTRACTOR_SOURCE_FILES})

set (DATAEXTRACTOR_HEADER_FILES
	common/aequipment.h
	common/audio.h
	common/baselayout.h
	common/doodads.h
	common/economy.h
	common/facilities.h
	common/organisations.h
	common/ufopaedia.h
	common/vequipment.h
	common/datachunk.h
	common/strtab.h
	common/canonstring.h
	common/ufo2p.h
	common/scenerytile.h
	common/vehicle.h
	common/research.h
	common/bulletsprite.h
	common/building.h
	common/battlemap.h
	common/tacp.h
	extractors.h)

source_group(dataextractor\\headers FILES ${DATAEXTRACTOR_HEADER_FILES})

list(APPEND ALL_SOURCE_FILES ${DATAEXTRACTOR_SOURCE_FILES})
list(APPEND ALL_HEADER_FILES ${DATAEXTRACTOR_HEADER_FILES})

add_executable(OpenApoc_DataExtractor ${DATAEXTRACTOR_SOURCE_FILES}
		${DATAEXTRACTOR_HEADER_FILES})

set( EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin )

target_link_libraries(OpenApoc_DataExtractor OpenApoc_Library)
target_link_libraries(OpenApoc_DataExtractor OpenApoc_Framework)
target_link_libraries(OpenApoc_DataExtractor OpenApoc_GameState)

set_property(TARGET OpenApoc_DataExtractor PROPERTY CXX_STANDARD 11)

option(EXTRACT_DATA "Run the DataExtractor during build" ON)

function (add_extractor TARGET_LIST EXTRACTOR_NAME)
	foreach (OUTPUT_NAME ${ARGN})
			list(APPEND EXTRACTOR_OUTPUT "${CMAKE_SOURCE_DIR}/${OUTPUT_NAME}")
	endforeach()
	add_custom_command(OUTPUT
		${EXTRACTOR_OUTPUT}
		COMMAND
		${CMAKE_BINARY_DIR}/bin/OpenApoc_DataExtractor
		--Framework.CD=${CD_PATH}
		--Framework.Data=${CMAKE_SOURCE_DIR}/data
		--Extractor.extract=${EXTRACTOR_NAME}
		DEPENDS OpenApoc_DataExtractor
		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR})
	set(${TARGET_LIST} ${${TARGET_LIST}} ${EXTRACTOR_OUTPUT} PARENT_SCOPE) 
endfunction(add_extractor)

SET(EXTRACTOR_TARGET_LIST "")

add_extractor(EXTRACTOR_TARGET_LIST "difficulty1" "data/difficulty1_patched")
add_extractor(EXTRACTOR_TARGET_LIST "difficulty2" "data/difficulty2_patched")
add_extractor(EXTRACTOR_TARGET_LIST "difficulty3" "data/difficulty3_patched")
add_extractor(EXTRACTOR_TARGET_LIST "difficulty4" "data/difficulty4_patched")
add_extractor(EXTRACTOR_TARGET_LIST "difficulty5" "data/difficulty5_patched")
add_extractor(EXTRACTOR_TARGET_LIST "common_gamestate" "data/gamestate_common")
add_extractor(EXTRACTOR_TARGET_LIST "battle_bullet_sprites"
	"data/bulletsprites/battle/00.png"
	"data/bulletsprites/battle/01.png"
	"data/bulletsprites/battle/02.png"
	"data/bulletsprites/battle/03.png"
	"data/bulletsprites/battle/04.png"
	"data/bulletsprites/battle/05.png"
	"data/bulletsprites/battle/06.png"
	"data/bulletsprites/battle/07.png"
	"data/bulletsprites/battle/08.png"
	"data/bulletsprites/battle/09.png"
	"data/bulletsprites/battle/10.png"
	"data/bulletsprites/battle/11.png"
	"data/bulletsprites/battle/12.png"
	"data/bulletsprites/battle/13.png"
	"data/bulletsprites/battle/14.png"
	"data/bulletsprites/battle/15.png"
	"data/bulletsprites/battle/16.png"
	"data/bulletsprites/battle/17.png"
	"data/bulletsprites/battle/18.png"
	"data/bulletsprites/battle/19.png"
	"data/bulletsprites/battle/20.png"
	"data/bulletsprites/battle/21.png"
	"data/bulletsprites/battle/22.png"
	"data/bulletsprites/battle/23.png"
	"data/bulletsprites/battle/24.png"
	"data/bulletsprites/battle/25.png"
	"data/bulletsprites/battle/26.png"
	"data/bulletsprites/battle/27.png"
	"data/bulletsprites/battle/28.png"
	"data/bulletsprites/battle/29.png"
	"data/bulletsprites/battle/30.png"
	"data/bulletsprites/battle/31.png"
	"data/bulletsprites/battle/32.png"
	"data/bulletsprites/battle/33.png"
	"data/bulletsprites/battle/34.png"
	"data/bulletsprites/battle/35.png"
	"data/bulletsprites/battle/36.png"
	"data/bulletsprites/battle/37.png"
	"data/bulletsprites/battle/38.png"
	"data/bulletsprites/battle/39.png"
	"data/bulletsprites/battle/40.png"
	"data/bulletsprites/battle/41.png"
	"data/bulletsprites/battle/42.png"
	"data/bulletsprites/battle/43.png"
	"data/bulletsprites/battle/44.png"
	"data/bulletsprites/battle/45.png"
	"data/bulletsprites/battle/46.png"
	"data/bulletsprites/battle/47.png"
	"data/bulletsprites/battle/48.png"
	"data/bulletsprites/battle/49.png"
	"data/bulletsprites/battle/50.png"
	"data/bulletsprites/battle/51.png"
	"data/bulletsprites/battle/52.png"
	"data/bulletsprites/battle/53.png"
	"data/bulletsprites/battle/54.png"
	"data/bulletsprites/battle/55.png"
	"data/bulletsprites/battle/56.png"
	"data/bulletsprites/battle/57.png")

add_extractor(EXTRACTOR_TARGET_LIST "city_bullet_sprites"
	"data/bulletsprites/city/00.png"
	"data/bulletsprites/city/01.png"
	"data/bulletsprites/city/02.png"
	"data/bulletsprites/city/03.png"
	"data/bulletsprites/city/04.png"
	"data/bulletsprites/city/05.png"
	"data/bulletsprites/city/06.png"
	"data/bulletsprites/city/07.png"
	"data/bulletsprites/city/08.png"
	"data/bulletsprites/city/09.png"
	"data/bulletsprites/city/10.png"
	"data/bulletsprites/city/11.png"
	"data/bulletsprites/city/12.png"
	"data/bulletsprites/city/13.png"
	"data/bulletsprites/city/14.png"
	"data/bulletsprites/city/15.png"
	"data/bulletsprites/city/16.png"
	"data/bulletsprites/city/17.png"
	"data/bulletsprites/city/18.png"
	"data/bulletsprites/city/19.png"
	"data/bulletsprites/city/20.png"
	"data/bulletsprites/city/21.png"
	"data/bulletsprites/city/22.png"
	"data/bulletsprites/city/23.png"
	"data/bulletsprites/city/24.png"
	"data/bulletsprites/city/25.png"
	"data/bulletsprites/city/26.png"
	"data/bulletsprites/city/27.png"
	"data/bulletsprites/city/28.png"
	"data/bulletsprites/city/29.png"
	"data/bulletsprites/city/30.png"
	"data/bulletsprites/city/31.png"
	"data/bulletsprites/city/32.png"
	"data/bulletsprites/city/33.png"
	"data/bulletsprites/city/34.png"
	"data/bulletsprites/city/35.png")
add_extractor(EXTRACTOR_TARGET_LIST "unit_image_packs"
	"data/imagepacks/antrpa"
	"data/imagepacks/antrpb"
	"data/imagepacks/antrpc"
	"data/imagepacks/antrpd"
	"data/imagepacks/antrpe"
	"data/imagepacks/culta"
	"data/imagepacks/cultb"
	"data/imagepacks/cultc"
	"data/imagepacks/cultd"
	"data/imagepacks/culte"
	"data/imagepacks/cultla"
	"data/imagepacks/cultlb"
	"data/imagepacks/cultlc"
	"data/imagepacks/cultld"
	"data/imagepacks/cultle"
	"data/imagepacks/gang2a"
	"data/imagepacks/gang2b"
	"data/imagepacks/gang2c"
	"data/imagepacks/gang2d"
	"data/imagepacks/gang2e"
	"data/imagepacks/ganga"
	"data/imagepacks/gangb"
	"data/imagepacks/gangc"
	"data/imagepacks/gangd"
	"data/imagepacks/gange"
	"data/imagepacks/gangla"
	"data/imagepacks/ganglb"
	"data/imagepacks/ganglc"
	"data/imagepacks/gangld"
	"data/imagepacks/gangle"
	"data/imagepacks/polica"
	"data/imagepacks/policb"
	"data/imagepacks/policc"
	"data/imagepacks/policd"
	"data/imagepacks/police"
	"data/imagepacks/seca"
	"data/imagepacks/secb"
	"data/imagepacks/secc"
	"data/imagepacks/secd"
	"data/imagepacks/sece"
	"data/imagepacks/skela"
	"data/imagepacks/skelb"
	"data/imagepacks/skelc"
	"data/imagepacks/skeld"
	"data/imagepacks/skele"
	"data/imagepacks/xcom1a"
	"data/imagepacks/xcom1b"
	"data/imagepacks/xcom1c"
	"data/imagepacks/xcom1d"
	"data/imagepacks/xcom1e"
	"data/imagepacks/xcom2a"
	"data/imagepacks/xcom2b"
	"data/imagepacks/xcom2c"
	"data/imagepacks/xcom2d"
	"data/imagepacks/xcom2e"
	"data/imagepacks/xcom3a"
	"data/imagepacks/xcom3b"
	"data/imagepacks/xcom3c"
	"data/imagepacks/xcom3d"
	"data/imagepacks/xcom3e"
	"data/imagepacks/xcom4a"
	"data/imagepacks/xcom4b"
	"data/imagepacks/xcom4c"
	"data/imagepacks/xcom4d"
	"data/imagepacks/xcom4e"
	"data/imagepacks/bsk"
	"data/imagepacks/chrysa"
	"data/imagepacks/chrysb"
	"data/imagepacks/gun"
	"data/imagepacks/hypr"
	"data/imagepacks/megaa"
	"data/imagepacks/megab"
	"data/imagepacks/megad"
	"data/imagepacks/megae"
	"data/imagepacks/micro"
	"data/imagepacks/multi"
	"data/imagepacks/mwegga"
	"data/imagepacks/mweggb"
	"data/imagepacks/popper"
	"data/imagepacks/psi"
	"data/imagepacks/queena"
	"data/imagepacks/queenb"
	"data/imagepacks/spitr"
	"data/imagepacks/grey"
	"data/imagepacks/nm1"
	"data/imagepacks/nm2"
	"data/imagepacks/nm3"
	"data/imagepacks/nw1"
	"data/imagepacks/nw2"
	"data/imagepacks/nw3"
	"data/imagepacks/rm1"
	"data/imagepacks/rm2"
	"data/imagepacks/rm3"
	"data/imagepacks/robo1"
	"data/imagepacks/robo2"
	"data/imagepacks/robo3"
	"data/imagepacks/robo4"
	"data/imagepacks/robot"
	"data/imagepacks/rw1"
	"data/imagepacks/rw2"
	"data/imagepacks/rw3"
	"data/imagepacks/scntst"
	"data/imagepacks/sm1"
	"data/imagepacks/sm2"
	"data/imagepacks/sm3"
	"data/imagepacks/sw1"
	"data/imagepacks/sw2"
	"data/imagepacks/sw3")
add_extractor(EXTRACTOR_TARGET_LIST "item_image_packs"
	"data/imagepacks/item0"
	"data/imagepacks/item1"
	"data/imagepacks/item10"
	"data/imagepacks/item11"
	"data/imagepacks/item12"
	"data/imagepacks/item13"
	"data/imagepacks/item14"
	"data/imagepacks/item15"
	"data/imagepacks/item16"
	"data/imagepacks/item17"
	"data/imagepacks/item18"
	"data/imagepacks/item19"
	"data/imagepacks/item2"
	"data/imagepacks/item20"
	"data/imagepacks/item21"
	"data/imagepacks/item22"
	"data/imagepacks/item23"
	"data/imagepacks/item24"
	"data/imagepacks/item25"
	"data/imagepacks/item26"
	"data/imagepacks/item27"
	"data/imagepacks/item28"
	"data/imagepacks/item29"
	"data/imagepacks/item3"
	"data/imagepacks/item30"
	"data/imagepacks/item31"
	"data/imagepacks/item32"
	"data/imagepacks/item33"
	"data/imagepacks/item34"
	"data/imagepacks/item35"
	"data/imagepacks/item36"
	"data/imagepacks/item37"
	"data/imagepacks/item38"
	"data/imagepacks/item39"
	"data/imagepacks/item4"
	"data/imagepacks/item40"
	"data/imagepacks/item41"
	"data/imagepacks/item42"
	"data/imagepacks/item43"
	"data/imagepacks/item44"
	"data/imagepacks/item45"
	"data/imagepacks/item46"
	"data/imagepacks/item47"
	"data/imagepacks/item48"
	"data/imagepacks/item49"
	"data/imagepacks/item5"
	"data/imagepacks/item50"
	"data/imagepacks/item51"
	"data/imagepacks/item52"
	"data/imagepacks/item53"
	"data/imagepacks/item54"
	"data/imagepacks/item55"
	"data/imagepacks/item56"
	"data/imagepacks/item57"
	"data/imagepacks/item58"
	"data/imagepacks/item59"
	"data/imagepacks/item6"
	"data/imagepacks/item7"
	"data/imagepacks/item8"
	"data/imagepacks/item9")
add_extractor(EXTRACTOR_TARGET_LIST "unit_shadow_packs"
	"data/imagepacks/shadow"
	"data/imagepacks/bsks"
	"data/imagepacks/hyprs"
	"data/imagepacks/megas"
	"data/imagepacks/poppers"
	"data/imagepacks/psis"
	"data/imagepacks/spitrs")
add_extractor(EXTRACTOR_TARGET_LIST "unit_animation_packs"
	"data/animationpacks/bsk"
	"data/animationpacks/chrys1"
	"data/animationpacks/chrys2"
	"data/animationpacks/civ"
	"data/animationpacks/gun"
	"data/animationpacks/hypr"
	"data/animationpacks/mega"
	"data/animationpacks/micro"
	"data/animationpacks/multi"
	"data/animationpacks/mwegg1"
	"data/animationpacks/popper"
	"data/animationpacks/psi"
	"data/animationpacks/queen"
	"data/animationpacks/spitr"
	"data/animationpacks/unit")
add_extractor(EXTRACTOR_TARGET_LIST "battle_map_tilesets"
	"data/tilesets/01senate"
	"data/tilesets/02police"
	"data/tilesets/03hospit"
	"data/tilesets/04school"
	"data/tilesets/05rescue"
	"data/tilesets/06office"
	"data/tilesets/07corphq"
	"data/tilesets/08port"
	"data/tilesets/10astro"
	"data/tilesets/11park"
	"data/tilesets/12shops"
	"data/tilesets/14acnorm"
	"data/tilesets/15acposh"
	"data/tilesets/18hydro"
	"data/tilesets/19sewage"
	"data/tilesets/20water"
	"data/tilesets/21appl"
	"data/tilesets/22arms"
	"data/tilesets/23robots"
	"data/tilesets/25flyer"
	"data/tilesets/26lflyer"
	"data/tilesets/27constr"
	"data/tilesets/28slums"
	"data/tilesets/30ware"
	"data/tilesets/32power"
	"data/tilesets/33recycl"
	"data/tilesets/35tubes"
	"data/tilesets/36church"
	"data/tilesets/37base"
	"data/tilesets/39incub"
	"data/tilesets/40spawn"
	"data/tilesets/41food"
	"data/tilesets/42megapd"
	"data/tilesets/43sleep"
	"data/tilesets/44organ"
	"data/tilesets/45farm"
	"data/tilesets/46contrl"
	"data/tilesets/47maint"
	"data/tilesets/48gate"
	"data/tilesets/50senso"
	"data/tilesets/51ufo1"
	"data/tilesets/52ufo2"
	"data/tilesets/53ufo3"
	"data/tilesets/54ufo4"
	"data/tilesets/55ufo5"
	"data/tilesets/56ufo6"
	"data/tilesets/57ufo7"
	"data/tilesets/58ufo8")
add_extractor(EXTRACTOR_TARGET_LIST "battle_map_sectors"
	"data/maps/01senate_01"
	"data/maps/01senate_02"
	"data/maps/01senate_03"
	"data/maps/01senate_04"
	"data/maps/01senate_05"
	"data/maps/01senate_06"
	"data/maps/01senate_07"
	"data/maps/01senate_08"
	"data/maps/01senate_09"
	"data/maps/01senate_10"
	"data/maps/01senate_11"
	"data/maps/01senate_12"
	"data/maps/01senate_13"
	"data/maps/01senate_14"
	"data/maps/01senate_15"
	"data/maps/01senate_16"
	"data/maps/01senate_17"
	"data/maps/02police_01"
	"data/maps/02police_02"
	"data/maps/02police_03"
	"data/maps/02police_04"
	"data/maps/02police_05"
	"data/maps/02police_06"
	"data/maps/02police_07"
	"data/maps/02police_08"
	"data/maps/02police_11"
	"data/maps/02police_12"
	"data/maps/02police_13"
	"data/maps/02police_14"
	"data/maps/02police_15"
	"data/maps/02police_16"
	"data/maps/03hospit_01"
	"data/maps/03hospit_02"
	"data/maps/03hospit_03"
	"data/maps/03hospit_04"
	"data/maps/03hospit_05"
	"data/maps/03hospit_06"
	"data/maps/03hospit_07"
	"data/maps/03hospit_08"
	"data/maps/03hospit_09"
	"data/maps/03hospit_10"
	"data/maps/04school_01"
	"data/maps/04school_02"
	"data/maps/04school_03"
	"data/maps/04school_04"
	"data/maps/04school_05"
	"data/maps/04school_06"
	"data/maps/04school_07"
	"data/maps/04school_08"
	"data/maps/04school_09"
	"data/maps/04school_10"
	"data/maps/04school_11"
	"data/maps/04school_12"
	"data/maps/04school_13"
	"data/maps/04school_14"
	"data/maps/04school_15"
	"data/maps/04school_16"
	"data/maps/04school_17"
	"data/maps/04school_18"
	"data/maps/04school_19"
	"data/maps/05rescue_01"
	"data/maps/05rescue_02"
	"data/maps/05rescue_03"
	"data/maps/05rescue_05"
	"data/maps/05rescue_06"
	"data/maps/05rescue_07"
	"data/maps/05rescue_08"
	"data/maps/05rescue_09"
	"data/maps/05rescue_10"
	"data/maps/05rescue_11"
	"data/maps/05rescue_12"
	"data/maps/05rescue_13"
	"data/maps/05rescue_14"
	"data/maps/05rescue_15"
	"data/maps/05rescue_16"
	"data/maps/06office_01"
	"data/maps/06office_02"
	"data/maps/06office_03"
	"data/maps/06office_04"
	"data/maps/06office_05"
	"data/maps/06office_06"
	"data/maps/06office_07"
	"data/maps/06office_08"
	"data/maps/06office_10"
	"data/maps/06office_11"
	"data/maps/06office_12"
	"data/maps/06office_13"
	"data/maps/06office_14"
	"data/maps/06office_15"
	"data/maps/07corphq_01"
	"data/maps/07corphq_02"
	"data/maps/07corphq_03"
	"data/maps/07corphq_04"
	"data/maps/07corphq_05"
	"data/maps/07corphq_06"
	"data/maps/07corphq_07"
	"data/maps/07corphq_08"
	"data/maps/07corphq_09"
	"data/maps/07corphq_10"
	"data/maps/07corphq_11"
	"data/maps/07corphq_12"
	"data/maps/07corphq_13"
	"data/maps/07corphq_14"
	"data/maps/08port_01"
	"data/maps/08port_02"
	"data/maps/08port_03"
	"data/maps/08port_04"
	"data/maps/08port_05"
	"data/maps/08port_06"
	"data/maps/08port_07"
	"data/maps/08port_08"
	"data/maps/08port_09"
	"data/maps/08port_10"
	"data/maps/08port_11"
	"data/maps/08port_12"
	"data/maps/08port_13"
	"data/maps/08port_14"
	"data/maps/08port_15"
	"data/maps/08port_16"
	"data/maps/10astro_01"
	"data/maps/10astro_02"
	"data/maps/10astro_03"
	"data/maps/10astro_04"
	"data/maps/10astro_05"
	"data/maps/10astro_06"
	"data/maps/10astro_07"
	"data/maps/10astro_08"
	"data/maps/10astro_09"
	"data/maps/10astro_11"
	"data/maps/10astro_12"
	"data/maps/10astro_14"
	"data/maps/11park_01"
	"data/maps/11park_02"
	"data/maps/11park_03"
	"data/maps/11park_04"
	"data/maps/11park_05"
	"data/maps/11park_06"
	"data/maps/11park_07"
	"data/maps/11park_08"
	"data/maps/11park_09"
	"data/maps/11park_10"
	"data/maps/11park_11"
	"data/maps/11park_12"
	"data/maps/11park_14"
	"data/maps/11park_15"
	"data/maps/11park_16"
	"data/maps/11park_17"
	"data/maps/12shops_01"
	"data/maps/12shops_02"
	"data/maps/12shops_03"
	"data/maps/12shops_04"
	"data/maps/12shops_05"
	"data/maps/12shops_06"
	"data/maps/12shops_07"
	"data/maps/12shops_08"
	"data/maps/12shops_09"
	"data/maps/12shops_10"
	"data/maps/12shops_11"
	"data/maps/12shops_12"
	"data/maps/12shops_13"
	"data/maps/14acnorm_01"
	"data/maps/14acnorm_02"
	"data/maps/14acnorm_03"
	"data/maps/14acnorm_04"
	"data/maps/14acnorm_05"
	"data/maps/14acnorm_06"
	"data/maps/14acnorm_07"
	"data/maps/14acnorm_08"
	"data/maps/14acnorm_09"
	"data/maps/14acnorm_10"
	"data/maps/15acposh_01"
	"data/maps/15acposh_02"
	"data/maps/15acposh_03"
	"data/maps/15acposh_04"
	"data/maps/15acposh_05"
	"data/maps/15acposh_06"
	"data/maps/15acposh_07"
	"data/maps/15acposh_08"
	"data/maps/15acposh_09"
	"data/maps/15acposh_10"
	"data/maps/15acposh_11"
	"data/maps/15acposh_12"
	"data/maps/15acposh_13"
	"data/maps/15acposh_14"
	"data/maps/15acposh_15"
	"data/maps/18hydro_01"
	"data/maps/18hydro_02"
	"data/maps/18hydro_03"
	"data/maps/18hydro_04"
	"data/maps/18hydro_06"
	"data/maps/18hydro_07"
	"data/maps/18hydro_08"
	"data/maps/18hydro_09"
	"data/maps/18hydro_10"
	"data/maps/18hydro_11"
	"data/maps/18hydro_12"
	"data/maps/18hydro_13"
	"data/maps/18hydro_14"
	"data/maps/18hydro_15"
	"data/maps/19sewage_01"
	"data/maps/19sewage_02"
	"data/maps/19sewage_03"
	"data/maps/19sewage_04"
	"data/maps/19sewage_05"
	"data/maps/19sewage_06"
	"data/maps/19sewage_07"
	"data/maps/19sewage_08"
	"data/maps/19sewage_09"
	"data/maps/19sewage_10"
	"data/maps/19sewage_11"
	"data/maps/19sewage_12"
	"data/maps/19sewage_13"
	"data/maps/19sewage_14"
	"data/maps/19sewage_15"
	"data/maps/19sewage_16"
	"data/maps/19sewage_17"
	"data/maps/19sewage_18"
	"data/maps/19sewage_19"
	"data/maps/20water_01"
	"data/maps/20water_02"
	"data/maps/20water_03"
	"data/maps/20water_04"
	"data/maps/20water_05"
	"data/maps/20water_06"
	"data/maps/20water_07"
	"data/maps/20water_08"
	"data/maps/20water_09"
	"data/maps/20water_10"
	"data/maps/21appl_01"
	"data/maps/21appl_02"
	"data/maps/21appl_03"
	"data/maps/21appl_04"
	"data/maps/21appl_05"
	"data/maps/21appl_06"
	"data/maps/21appl_07"
	"data/maps/21appl_09"
	"data/maps/21appl_10"
	"data/maps/21appl_11"
	"data/maps/21appl_12"
	"data/maps/21appl_13"
	"data/maps/22arms_01"
	"data/maps/22arms_02"
	"data/maps/22arms_03"
	"data/maps/22arms_04"
	"data/maps/22arms_05"
	"data/maps/22arms_06"
	"data/maps/22arms_07"
	"data/maps/22arms_08"
	"data/maps/22arms_09"
	"data/maps/22arms_10"
	"data/maps/22arms_11"
	"data/maps/22arms_12"
	"data/maps/22arms_13"
	"data/maps/22arms_15"
	"data/maps/22arms_16"
	"data/maps/23robots_01"
	"data/maps/23robots_02"
	"data/maps/23robots_03"
	"data/maps/23robots_04"
	"data/maps/23robots_05"
	"data/maps/23robots_06"
	"data/maps/23robots_07"
	"data/maps/23robots_08"
	"data/maps/23robots_09"
	"data/maps/23robots_10"
	"data/maps/23robots_11"
	"data/maps/23robots_12"
	"data/maps/23robots_13"
	"data/maps/23robots_14"
	"data/maps/23robots_15"
	"data/maps/23robots_16"
	"data/maps/23robots_17"
	"data/maps/25flyer_01"
	"data/maps/25flyer_02"
	"data/maps/25flyer_03"
	"data/maps/25flyer_04"
	"data/maps/25flyer_05"
	"data/maps/25flyer_06"
	"data/maps/25flyer_07"
	"data/maps/25flyer_08"
	"data/maps/25flyer_09"
	"data/maps/25flyer_10"
	"data/maps/26lflyer_01"
	"data/maps/26lflyer_02"
	"data/maps/26lflyer_03"
	"data/maps/26lflyer_04"
	"data/maps/26lflyer_05"
	"data/maps/26lflyer_06"
	"data/maps/26lflyer_07"
	"data/maps/26lflyer_08"
	"data/maps/26lflyer_09"
	"data/maps/26lflyer_10"
	"data/maps/27constr_01"
	"data/maps/27constr_02"
	"data/maps/27constr_03"
	"data/maps/27constr_04"
	"data/maps/27constr_05"
	"data/maps/27constr_06"
	"data/maps/27constr_07"
	"data/maps/27constr_08"
	"data/maps/27constr_09"
	"data/maps/27constr_10"
	"data/maps/27constr_11"
	"data/maps/27constr_12"
	"data/maps/27constr_13"
	"data/maps/27constr_15"
	"data/maps/27constr_16"
	"data/maps/28slums_01"
	"data/maps/28slums_02"
	"data/maps/28slums_03"
	"data/maps/28slums_04"
	"data/maps/28slums_05"
	"data/maps/28slums_06"
	"data/maps/28slums_07"
	"data/maps/30ware_01"
	"data/maps/30ware_02"
	"data/maps/30ware_03"
	"data/maps/30ware_04"
	"data/maps/30ware_05"
	"data/maps/30ware_06"
	"data/maps/30ware_07"
	"data/maps/30ware_08"
	"data/maps/30ware_09"
	"data/maps/30ware_10"
	"data/maps/32power_01"
	"data/maps/32power_02"
	"data/maps/32power_03"
	"data/maps/32power_04"
	"data/maps/32power_05"
	"data/maps/32power_06"
	"data/maps/32power_07"
	"data/maps/32power_08"
	"data/maps/32power_09"
	"data/maps/32power_10"
	"data/maps/33recycl_01"
	"data/maps/33recycl_02"
	"data/maps/33recycl_03"
	"data/maps/33recycl_04"
	"data/maps/33recycl_05"
	"data/maps/33recycl_06"
	"data/maps/33recycl_07"
	"data/maps/33recycl_08"
	"data/maps/33recycl_09"
	"data/maps/33recycl_10"
	"data/maps/35tubes_01"
	"data/maps/35tubes_02"
	"data/maps/35tubes_03"
	"data/maps/35tubes_04"
	"data/maps/35tubes_05"
	"data/maps/35tubes_06"
	"data/maps/36church_01"
	"data/maps/36church_02"
	"data/maps/36church_03"
	"data/maps/36church_04"
	"data/maps/36church_05"
	"data/maps/36church_06"
	"data/maps/36church_07"
	"data/maps/36church_08"
	"data/maps/36church_09"
	"data/maps/36church_10"
	"data/maps/36church_11"
	"data/maps/36church_12"
	"data/maps/37base_01"
	"data/maps/37base_02"
	"data/maps/37base_03"
	"data/maps/37base_04"
	"data/maps/37base_05"
	"data/maps/37base_06"
	"data/maps/37base_07"
	"data/maps/37base_08"
	"data/maps/37base_09"
	"data/maps/37base_10"
	"data/maps/37base_11"
	"data/maps/37base_12"
	"data/maps/37base_13"
	"data/maps/37base_14"
	"data/maps/37base_15"
	"data/maps/37base_16"
	"data/maps/37base_17"
	"data/maps/37base_18"
	"data/maps/37base_19"
	"data/maps/37base_20"
	"data/maps/37base_21"
	"data/maps/37base_22"
	"data/maps/37base_23"
	"data/maps/37base_24"
	"data/maps/37base_25"
	"data/maps/37base_26"
	"data/maps/37base_27"
	"data/maps/37base_28"
	"data/maps/37base_29"
	"data/maps/37base_30"
	"data/maps/37base_31"
	"data/maps/37base_32"
	"data/maps/37base_33"
	"data/maps/37base_34"
	"data/maps/37base_35"
	"data/maps/39incub_01"
	"data/maps/39incub_02"
	"data/maps/39incub_03"
	"data/maps/40spawn_01"
	"data/maps/40spawn_02"
	"data/maps/40spawn_03"
	"data/maps/41food_01"
	"data/maps/41food_02"
	"data/maps/41food_03"
	"data/maps/42megapd_01"
	"data/maps/42megapd_02"
	"data/maps/42megapd_03"
	"data/maps/43sleep_01"
	"data/maps/43sleep_02"
	"data/maps/43sleep_03"
	"data/maps/44organ_01"
	"data/maps/44organ_02"
	"data/maps/44organ_03"
	"data/maps/45farm_01"
	"data/maps/45farm_02"
	"data/maps/45farm_03"
	"data/maps/46contrl_01"
	"data/maps/46contrl_02"
	"data/maps/46contrl_03"
	"data/maps/47maint_01"
	"data/maps/47maint_02"
	"data/maps/47maint_03"
	"data/maps/48gate_01"
	"data/maps/50senso_01"
	"data/maps/50senso_02"
	"data/maps/50senso_03"
	"data/maps/50senso_04"
	"data/maps/50senso_05"
	"data/maps/50senso_06"
	"data/maps/50senso_07"
	"data/maps/50senso_08"
	"data/maps/50senso_10"
	"data/maps/51ufo1_01"
	"data/maps/52ufo2_01"
	"data/maps/53ufo3_01"
	"data/maps/54ufo4_01"
	"data/maps/55ufo5_01"
	"data/maps/56ufo6_01"
	"data/maps/57ufo7_01"
	"data/maps/58ufo8_01")

add_custom_target(extract-data ALL DEPENDS ${EXTRACTOR_TARGET_LIST})
